fixed layout issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,3 +49,7 @@ h6 {
   -webkit-transform: translate(15px, 15px);
   transform: translate(15px, 15px);
 }
+
+span {
+  font-size: 20px;
+}
