--- a/src/styles/spacing.css
+++ b/src/styles/spacing.css
@@ -15,10 +15,36 @@
   padding-right: 10px;
 }
 
-.width40 {
-  width: 40%;
+.width45 {
+  width: 45%;
+}
+
+.width100 {
+  width: 100%;
 }
 
 .width50 {
   width: 50%;
+}
+
+.width1100 {
+  width: 1100px;
+}
+
+.width600 {
+  width: 600px;
+}
+
+.width500 {
+  width: 500px;
+}
+
+.aligner {
+  text-align: center;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
